--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     },
     "dependencies": {
         "@heroicons/vue": "2.0.15",
+        "@paralleldrive/cuid2": "^2.1.0",
         "@pinia/nuxt": "0.4.6",
         "@tauri-apps/api": "1.2.0",
         "floating-vue": "2.0.0-beta.20",
