--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
         "pinia": "2.0.32",
         "tauri-plugin-autostart-api": "github:tauri-apps/tauri-plugin-autostart#0c8e3ad92e00e7b0aed60fc8a639e77407105253",
         "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#916165e4e4ad9821095584dc02ecd9c295cc9971",
-        "vue3-smooth-dnd": "0.0.2"
+        "vue3-smooth-dnd": "0.0.2",
+        "zod": "^3.20.6"
     },
     "resolutions": {
         "terser": "5.16.4",
