--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
         "dev": "nuxt dev",
         "generate": "nuxt generate",
         "preview": "nuxt preview",
-        "lint": "eslint . --fix",
-        "prebuild": "node buildremind.js"
+        "lint": "eslint . --fix"
     },
     "devDependencies": {
         "@nuxt/eslint-config": "0.1.1",
