--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,7 +21,7 @@ tauri-build = { version = "1.2.1", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2.4", features = ["dialog-message", "dialog-open", "dialog-save", "fs-read-file", "fs-write-file", "protocol-asset", "shell-open"] }
+tauri = { version = "1.2.4", features = ["dialog-ask", "dialog-message", "dialog-open", "dialog-save", "fs-read-file", "fs-write-file", "protocol-asset", "shell-open"] }
 tauri-plugin-persisted-scope = { version = "0.1", features = [
     "protocol-asset",
 ] }
