chore: upgrade nuxt version to 3.5.2

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "@types/node": "^18.11.18",
         "eslint": "8.41.0",
         "eslint-plugin-tailwindcss": "^3.8.0",
-        "nuxt": "3.5.1",
+        "nuxt": "^3.5.2",
         "postcss-custom-properties": "13.1.5",
         "rollup-plugin-license": "^3.0.1"
     },
