--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
         "eslint": "8.41.0",
         "eslint-plugin-tailwindcss": "^3.8.0",
         "nuxt": "^3.5.2",
+        "nuxt-icon": "^0.4.1",
         "postcss-custom-properties": "13.1.5",
         "rollup-plugin-license": "^3.0.1"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.7.13",
         "@heroicons/vue": "2.0.18",
         "@paralleldrive/cuid2": "^2.1.0",
         "@pinia/nuxt": "0.4.11",
