--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "kanri",
     "private": true,
-    "version": "0.4.2",
+    "version": "0.4.3",
     "description": "Offline-first Kanban board desktop app",
     "author": "trobonox <hello@trobo.tech>",
     "license": "Apache-2.0",
@@ -43,7 +43,7 @@
     "resolutions": {
         "terser": "5.19.0",
         "undici": "5.22.1",
-        "loader-utils": "2.0.4",
-        "json5": "2.2.3"
+        "json5": "2.2.3",
+        "semver": "7.5.2"
     }
 }
