--- a/Dockerfile.armv7
+++ b/Dockerfile.armv7
@@ -20,7 +20,7 @@ RUN apt install -y --no-install-recommends \
                    pkg-config
 RUN rustup target add armv7-unknown-linux-gnueabihf
 RUN rustup toolchain install stable-armv7-unknown-linux-gnueabihf
-RUN cargo install tauri-cli
+RUN cargo install --version 1.4.0 tauri-cli
 WORKDIR /app
 
 ENV CARGO_TARGET_ARMV7_UNKNOWN_LINUX_GNUEABIHF_LINKER=arm-linux-gnueabihf-gcc \
