--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "@nuxtjs/tailwindcss": "6.8.0",
         "@tauri-apps/cli": "1.4.0",
         "@types/node": "^18.11.18",
+        "@vueuse/core": "^10.2.1",
+        "@vueuse/nuxt": "^10.2.1",
         "eslint": "8.45.0",
         "eslint-plugin-tailwindcss": "^3.8.0",
         "nuxt": "^3.5.2",
