--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
 
     runs-on: ${{ matrix.platform.os }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4
 
       - name: Output info
         run: echo ${{ matrix.platform.os }} ${{ matrix.platform.rust_target }}
@@ -78,7 +78,7 @@ jobs:
     outputs:
       upload_url: ${{ steps.release.outputs.upload_url }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4
       # Download the previously uploaded artifacts
       - uses: actions/download-artifact@v3
         id: download
@@ -104,7 +104,7 @@ jobs:
 
       runs-on: ubuntu-20.04
       steps:
-        - uses: actions/checkout@v3
+        - uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4
         - uses: actions/setup-node@v3
           with:
             node-version: 16
