--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,9 +22,7 @@ tauri-build = { version = "1.4.0", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.4.1", features = ["dialog-ask", "dialog-message", "dialog-open", "dialog-save", "fs-read-file", "fs-write-file", "protocol-asset", "shell-open"] }
-tauri-plugin-persisted-scope = { version = "0.1", features = [
-    "protocol-asset",
-] }
+tauri-plugin-persisted-scope = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features= ["protocol-asset"] }
 ignore = "=0.4.18"
 tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
