chore: update tiptap packages

--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
         "@phosphor-icons/vue": "^2.1.6",
         "@pinia/nuxt": "0.5.1",
         "@tauri-apps/api": "1.5.1",
-        "@tiptap/extension-typography": "^2.1.12",
-        "@tiptap/pm": "^2.1.12",
-        "@tiptap/starter-kit": "^2.1.12",
-        "@tiptap/vue-3": "^2.1.12",
+        "@tiptap/extension-typography": "2.1.13",
+        "@tiptap/pm": "2.1.13",
+        "@tiptap/starter-kit": "2.1.13",
+        "@tiptap/vue-3": "2.1.13",
         "floating-vue": "2.0.0-beta.24",
         "mitt": "3.0.1",
         "pinia": "2.1.7",
