--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
         "@tiptap/pm": "2.1.16",
         "@tiptap/starter-kit": "2.1.16",
         "@tiptap/vue-3": "2.1.16",
-        "floating-vue": "2.0.0-beta.24",
+        "floating-vue": "2.0.0",
         "mitt": "3.0.1",
         "pinia": "2.1.7",
         "radix-vue": "^1.2.2",
